assets/css/style.css
/* Google font for crimsons text and sourse sans three */
@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&family=Source+Sans+3:wght@500;600;700;800&display=swap');


/* navigation bar */
main {
    padding-top: 5em; 
}

.navbar-custom {
    background-color: #fff;
}

.navbar-brand img {
    display: inline-block;
    left: 15px;
    max-height: 40px;
    max-width: 100%;
}

.navbar-brand > span {
    color: #8C0032;
    display: inline;
    font-family:'Crimson Text', serif;
    font-weight: bold;
}

.custom-toggler i{
    color: #8C0032;
}

.nav-custom-text a {
    color: #8C0032;
    font-family: 'Source Sans 3', sans-serif;
    font-weight: 650;
}

/*  hero images */
.hero-image {
   object-fit: cover;
}



.hero-custom-text {
    color: #3d3035;
    font-family: 'Crimson Text', serif;
    font-weight: 650;
    font-size: large;
    letter-spacing: 2px;
    
}

.hero-custom-text-heading {
    color: #3d3035;
    font-family: 'Source Sans 3', sans-serif;
    font-weight: 650;
    font-size: xx-large;
    letter-spacing: 3px;
}

.carousel-item {
    max-height: 60vh;
}

#cardiac-surgery {
    background:#8C0032;
}


#cardiac-surgery p {
    color: #fff;
    font-family: 'Source Sans 3', sans-serif;
    padding: 15px;

}


#cardiac-surgery h1 {
    color: #fff;
    font-family: 'Source Sans 3', sans-serif;
    font-weight: 650;
    font-size: xx-large;
    letter-spacing: 3px;
    text-transform: uppercase;
    padding: 15px;
}

#cardiac-surgery img {
    border-radius: 20px;
    padding: 15px;
}

#cardiac-surgery a.btn {
    padding: 15px;
    color: white;
    font-family: 'Source Sans 3', sans-serif;
    text-decoration: none;
    border-radius: 15px;
    background:#8C0032;
    border: #fff solid 3px;
    margin-left: 15px;
 }

 #cardiac-surgery a.btn:hover {
    background-color: #333;

 }
/* locations in the index page */


.location-title {
    color: #8C0032;
    font-family: 'Source Sans 3', sans-serif;
    font-weight: 650;
    font-size: xx-large;
    letter-spacing: 3px;
    padding: 10px;
}

#locations .city-container-cardiff {
    background-image: url('../images/locations-cardiffv2.jpeg');
}


#locations .city-container-bristol {
    background-image: url('../images/locations-bristol.jpeg');

}

#locations .city-container-swansea {
    background-image: url('../images/locations-swansea.jpeg');

}

#locations .city-container-birmingham{
    background-image: url('../images/locations-birmingham.jpeg');
 
}

.parent {
    overflow: hidden;
    max-width: 100%;
    height: 35vh;
    position: relative;
    cursor: pointer;
    box-shadow: 0 4px 6px -1px rgba(0,0,0,0.5);
    border-radius: 10px;
}

.child {
    height: 100%;
    width: 100%;
    background-size: cover;
    transition: all 1.1s;
}

.parent:hover .child {
    transform: scale(1.2);
}

.location-heading {
    text-transform: uppercase;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 10px;

}
.location-heading p {
    color: #fff;
    font-family: 'Source Sans 3', sans-serif;
    font-size: 30px;
    font-weight: bold;
}

footer i {
     color: #8C0032;
}

footer .footer-text {
    color: #8C0032;
}

/* information page */

.hero-image-information {
    background-image: url("../images/hero-image7.jpeg");
    height: 50vh;
    width: 100%;
    background-size: cover;
    background-position: 40% 50%;
    background-repeat: no-repeat;
    position: relative;

}


@media screen and (max-width: 600px) {
    .hero-image-information{
        height: 15vh;
        width: 100%;
    }
}

.information-container {
    padding: 15px;
}

#cardiac-information {
    position: sticky;
    top: 4em;
}

.data-container h4, h5{
    font-family: 'Source Sans 3', sans-serif;
    color:#8C0032;
    font-weight: bold;
    font-size: x-large;
    padding-bottom: 5px;
    padding-top: 5px
}

.youtube-video {
    aspect-ratio: 16 / 9;
    width: 100%;
  }
  
.data-container p, li {
    font-family: 'Crimson Text', serif;
    font-size: large;
}
/* scrolpsy */

.information-container .nav .nav-link {
    color:#8C0032!important;
}

.information-container .nav .active {
    color: white!important;
    background-color:#8C0032!important;
}

.hospital-image img {
    border-radius: 20px;
    padding: 15px;
}

#location-information, #cardiff, #bristol, #swansea {
    scroll-margin-top: 5em;
}

#location-information .location-information-red {
    background:#8C0032;
    color: white;
    padding: 15px;  
    font-family: 'Source Sans 3', sans-serif;
}

#location-information .location-information-white {
    background:#fff;
    color: #333;
    padding: 15px;
    font-family: 'Source Sans 3', sans-serif;
}

/* contact page */
.hero-contact {
    display: block;
    background-image: url("../images/hero-contact.jpeg");
    height: 50vh;
    width: 100%;
    background-size: cover;
    background-repeat: no-repeat;
    position: relative;
}


.contact-cover-text {
    font-size: 130%;
    font-family: 'Source Sans 3', sans-serif;
    letter-spacing: 4px;
    color: #fff;
    padding: 3em;
    background-color: rgba(140,0,50,0.8);
    border-radius: 15px;
    bottom: 120px;
    left: 125px;
    position: absolute;
    text-transform: capitalize;
    text-align: center;
}

@media screen and (max-width: 600px) {
    .contact-cover-text {
        font-size: 75%;
        left: 5px;
    }
}

iframe.google-maps {
    width: 100% !important;
    height: 100% !important;
}

/* form-container */

.contact-message {
    color: #3d3035;
    font-family: 'Source Sans 3', sans-serif;
    padding: 10px;
    text-align: left;
}

.contact-message h2 {
    font-size: xx-large;
    text-transform: capitalize;
    font-weight: bold;
}


.form-container {
    background:#8C0032;
    padding: 4em;
}


.inner-form-container {
    text-align: center;
    border-radius: 15px;
    background-color:#e7e3e3;
    padding: 2em;
}


.form-elements-container {
    display: inline-block;
    background-color: #fff;
    border-radius: 15px;
    max-width: 100%;
    padding: 20px;
}

.form-elements-container input, textarea {
    width: 80%;
    border-radius: 10px;
    border: solid #8C0032 1px;
    padding: 5px;
}

span.input-group-text,
.form-control {
    border: solid #8C0032 1px !important;
}


.form-elements-container input[type=submit] {
    margin-left: 40px;
    color:#fff;
    background-color: #8C0032;
    padding: 5px;
}

.form-elements-container input[type=submit]:hover {
    color: #8C0032;  
    border: #8C0032 solid 1px;
    background-color: #fff;
}

#contact-location-container section{
    margin-top: 30px;
}

#contact-location-container .hospital-container-cardiff {
    background-image: url('../images/hospital-cardiff.jpg');
}


#contact-location-container .hospital-container-bristol {
    background-image: url('../images/hospital-bristol.jpeg');

}

#contact-location-container .hospital-container-swansea {
    background-image: url('../images/hospital-swansea.jpeg');

}

@media screen and (max-width: 600px)
{  
    .contact-message {
        font-size: large;
        padding: 5px;
    }
    
    .hero-contact{
        background-position: center;
    }

    .form-container {
        padding: 2em;
    }

    .inner-form-container{
        text-align: center;

    }
    .form-elements-container {
        padding: 5px;
    }

    .form-elements-container input[type=submit]{
        margin-left: 0;
    }
}

